# Chip-8_Emulator

./: .clang-format  CMakeLists.txt  main.cpp
